--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,12 +36,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-    - name: Run pytest
-      uses: pavelzw/pytest-action@v2.1.0
     
     - name: Test with pytest
       run: |
-        cd 3_lab  
-        pytest -vra test.py
+        cd 3_lab
+        pytest -vra --md=report.md --emoji test.py
         echo "Всі тести пройшли успішно!"
