--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,9 +23,7 @@ jobs:
       with:
         python-version: "3.11"
 
-    - name: Install dependencies93bc8
-  uses: codecov/codecov-action@v4.1.1
-  with:
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
@@ -34,6 +32,7 @@ jobs:
 
     - name: Lint with flake8
       run: |
+        cd 3_lab
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -45,8 +44,8 @@ jobs:
         coverage run -m pytest -vra test.py
         coverage xml
         echo "Всі тести пройшли успішно!"
+    
     - name: Codecov
       uses: codecov/codecov-action@v4.1.1
       with:
         directory: 3_lab/
-    
