--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,4 +48,5 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v4.1.1
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         directory: 3_lab/
